tests/ui/named-fields.stderr
error: Named fields are not supported
 --> $DIR/named-fields.rs:8:5
  |
8 |     #[opt = 'b']
  |     ^
